--- a/themes/airevisuelle/layouts/partials/site-footer.html
+++ b/themes/airevisuelle/layouts/partials/site-footer.html
@@ -127,7 +127,7 @@
     </div>
     <div class="copyright-content">
       <div class="container">
-        <div class="copyright-text text-center">&copy;2017. {{- i18n "copyright" | markdownify -}}</div>
+        <div class="copyright-text text-center">&copy;2018. {{ i18n "copyright" | markdownify }}</div>
       </div>
     </div>
   </footer>
