--- a/themes/airevisuelle/layouts/articles/single.html
+++ b/themes/airevisuelle/layouts/articles/single.html
@@ -5,14 +5,14 @@
 <main class="main" id="{{ .Type }}-indiv">
 
         <!-- Page title -->
-        <section id="page-title" class="background-image background-overlay-dark header-single-blog" style="background-image:url('{{.Params.image}}');">
+        <section id="page-title" class="background-image background-overlay-dark header-single-blog" style="background-image:url('/xl{{.Params.image}}');">
             <div class="container">
 
                 <div class="page-title">
                     <div data-animation="fadeIn" class="text-light">
                     	
                         <h1 data-animation="fadeInUp" data-animation-delay="1000">{{.Title}}</h1></div>
-                        <div class="small m-b-20" data-animation="fadeInUp"  data-animation-delay="1500">{{ if eq $.Lang "fr" }}{{.Date.Day}} {{ index $mymonths .Date.Month }}{{ else if eq $.Lang "en" }}{{.Date.Month}} {{ index $mydays .Date.Day }},{{ end }} {{.Date.Year}} | par L'Aire visuelle <!-- <span class="post-meta-category"> | <a href="">Technology</a></span></div> -->
+                        <div class="small m-b-20" data-animation="fadeInUp"  data-animation-delay="1500">{{ if eq $.Lang "fr" }}{{.Date.Day}} {{ index $mymonths .Date.Month }}{{ else if eq $.Lang "en" }}{{.Date.Month}} {{ index $mydays .Date.Day }},{{ end }} {{.Date.Year}} | {{ i18n "by" }} L'Aire visuelle <!-- <span class="post-meta-category"> | <a href="">Technology</a></span></div> -->
                 </div>
             </div>
         </section>
@@ -29,11 +29,6 @@
                             <!-- Post single item-->
                             <div class="post-item">
                                 <div class="post-item-wrap">
-                                    <!-- <div class="post-image">
-                                        <a href="#">
-                                            <img alt="" src="{{.Params.image}}">
-                                        </a>
-                                    </div> -->
                                     <div class="post-item-description">
                                         {{.Content}}
 
@@ -69,46 +64,7 @@
                     </div>
                     <!-- end: content -->
 
-                    <!-- Sidebar-->
-                    <div class="sidebar col-md-3">
-                        <div class="pinOnScroll">
-                            <!--widget newsletter-->
-                            <!-- <div class="widget  widget-newsletter">
-                            <form id="widget-search-form-sidebar" action="search-results-page.html" method="get" class="form-inline">
-                                <div class="input-group">
-                                    <input type="text" aria-required="true" name="q" class="form-control widget-search-form" placeholder="Search for pages..."> <span class="input-group-btn">
-				                  <button type="submit" id="widget-widget-search-form-button" class="btn btn-default"><i class="fa fa-search"></i></button>
-				                  </span> </div>
-                            </form>
-                                 
-                            </div> -->
-                            <!--end: widget newsletter-->
-
-                            <!--Services-->
-                            <div class="widget clearfix widget-categories">
-                                <h4 class="widget-title">{{ i18n "services" }}</h4>
-                                <ul class="list list-arrow-icons">
-                                    {{ range where .Site.RegularPages "Type" "services"}}
-                                    <li><a title="{{.Params.resume.title}}" href="{{.Permalink}}">{{.Params.resume.title}}</a></li>
-                                    {{ end }}
-                                </ul>
-                            </div>
-                            <!--End: Services-->
-
-                            <!--Archive-->
-                            <!-- <div class="widget clearfix widget-archive">
-                                <h4 class="widget-title">Archive</h4>
-                                <ul class="list list-lines">
-                                    <li>Jun 2015 </li>
-                                    <li>May 2015 </li>
-                                    <li>Apr 2015 </li>
-                                    <li>Mar 2015 </li>
-                                </ul>
-                            </div> -->
-                            <!--End: Archive-->
-                        </div>
-                    </div>
-                    <!-- end: Sidebar-->
+                    {{ partial "site/sidebar-right.html" . }}
 
 
                 </div>
