--- a/themes/airevisuelle/layouts/index.html
+++ b/themes/airevisuelle/layouts/index.html
@@ -68,7 +68,7 @@
               <h2>{{.Params.block4.titre}}</h2>
               <hr>
           </div>
-          <p style="margin-bottom: 80px; font-size: 1.35714286em; line-height: 1.68421053em; font-weight: 300;">{{.Params.block4.desc}} </p>
+          <p style="margin-bottom: 80px; font-size: 1.35714286em; line-height: 1.68421053em; font-weight: 300;">{{.Params.block4.text}} </p>
           <div class="portfolio">
 		          <!-- Portfolio Items -->
 		          <div id="portfolio" class="grid-layout portfolio-3-columns" data-margin="0">
@@ -93,10 +93,10 @@
                   <div class="portfolio-item img-zoom pf-illustrations pf-media hover-3d pf-icons pf-Media">
                       <div class="portfolio-item-wrap">
                           <div class="portfolio-image">
-                              <a href='{{ i18n "visionavenue" }}' target="_blank"><img src="/quart{{.Params.designers.extra.image}}" alt="Vision Avenue"></a>
+                              <a href='{{.Params.designers.extra.link}}' target="_blank"><img src="/quart{{.Params.designers.extra.image}}" alt="Vision Avenue"></a>
                           </div>
                           <div class="portfolio-description">
-                              <a href='{{ i18n "visionavenue" }}' target="_blank">
+                              <a href='{{.Params.designers.extra.link}}' target="_blank">
                                   <h3>{{.Params.designers.extra.titre}}</h3>
                               </a>
                           </div>
