--- a/themes/airevisuelle/layouts/partials/header/nav.html
+++ b/themes/airevisuelle/layouts/partials/header/nav.html
@@ -2,17 +2,31 @@
 <div id="mainMenu" class="light">
     <div class="container">
         <nav>
+            {{ if eq .Lang "fr" }}
             <ul>
-                <li class="visible-xs visible-sm"><a href="{{.Site.BaseURL}}">Accueil</a></li>
-                <li><a href="{{.Site.BaseURL}}catalogue">Catalogue</a></li>
-                <li><a href="{{.Site.BaseURL}}a-propos">À propos</a></li>
-                <li class="dropdown"> <a href="{{.Site.BaseURL}}services">Services</a>
+                <li class="visible-xs visible-sm"><a href='{{ $.Scratch.Get "homePage" }}'>Accueil</a></li>
+                <li><a href='{{ $.Scratch.Get "catalogPage" }}'>Catalogue</a></li>
+                <li><a href='{{ $.Scratch.Get "aboutPage" }}'>À propos</a></li>
+                <li class="dropdown"> <a href='{{ $.Scratch.Get "servicesPage" }}'>Services</a>
                     {{- partial "header/dropdown1.html" . -}}
                 </li>
                 <li> <a href="{{.Site.BaseURL}}services/examen-de-la-vue">Examen de la vue</a></li>
-                <li> <a href="{{.Site.BaseURL}}promotions">Promotions</a></li> 
-                <li> <a href="{{.Site.BaseURL}}nous-rejoindre">Contact</a></li>
+                <li> <a href='{{ $.Scratch.Get "promotionsPage" }}'>Promotions</a></li> 
+                <li> <a href='{{ $.Scratch.Get "contactPage" }}'>Contact</a></li>
             </ul>
+            {{ else if eq .Lang "en" }}
+            <ul>
+                <li class="visible-xs visible-sm"><a href='{{ $.Scratch.Get "homePage" }}'>Home</a></li>
+                <li><a href='{{ $.Scratch.Get "catalogPage" }}'>Catalog</a></li>
+                <li><a href='{{ $.Scratch.Get "aboutPage" }}'>About</a></li>
+                <li class="dropdown"> <a href='{{ $.Scratch.Get "servicesPage" }}'>Services</a>
+                    {{- partial "header/dropdown1.html" . -}}
+                </li>
+                <li> <a href="{{.Site.BaseURL}}en/services/eye-exam">Eye exam</a></li>
+                <li> <a href='{{ $.Scratch.Get "promotionsPage" }}'>Promotions</a></li> 
+                <li> <a href='{{ $.Scratch.Get "contactPage" }}'>Contact</a></li>
+            </ul>
+            {{ end }}
         </nav>
     </div>
 </div>
