--- a/themes/airevisuelle/layouts/partials/site/portfolio-item.html
+++ b/themes/airevisuelle/layouts/partials/site/portfolio-item.html
@@ -6,7 +6,7 @@
         </div>
         <div class="portfolio-description">
             <a href="{{.url}}" target="_blank">
-                <h3>Voir les produits</h3>
+                <h3>{{ i18n "see_products" }}</h3>
                 <span>{{.nom}}</span> </a>
         </div>
     </div>
