--- a/themes/airevisuelle/layouts/singles/a-propos.html
+++ b/themes/airevisuelle/layouts/singles/a-propos.html
@@ -17,14 +17,15 @@
 				<div class="row p-b-40">
 					<div class="col-md-3">
 						<div class="heading heading text-left">
-							<h2>NOTRE COMPAGNIE</h2>
-							
+							<h2>{{- .Params.section1.title -}}</h2>
 						</div>
 					</div>
 					<div class="col-md-9">
-						<div class="col-md-6">L’équipe de L’Aire Visuelle est heureuse de vous accueillir dans sa nouvelle clinique de Vimont à Laval. Chic, spacieuse et moderne, la salle de montre vous en mettra plein la vue avec ses vastes collections de montures. Que ce soit pour des lunettes de prescription, des lunettes solaires ou des verres de contact, L’Aire Visuelle vous promet de vivre une expérience unique en matière de lunetterie. <br> <br> Consultez notre section produits pour voir quelques-unes de nos montures et de nos lunettes de soleil disponibles dans notre salle d’exposition. Et Rappelez-vous… Il ne s’agit que d’un petit échantillonnage de notre panoplie de montures sélectionnées judicieusement pour notre clientèle. </div>
-
-						<div class="col-md-6">Notre grande sélection reflète les tendances actuelles de la mode en matière de lunetterie, elle répond aux besoins de notre fidèle clientèle que nous apprécions et sera très certainement plaire à nos futurs clients.
+						<div class="col-md-6">
+							{{- .Params.section1.column1 | markdownify -}} 
+						</div>
+						<div class="col-md-6">
+							{{- .Params.section1.column2 | markdownify -}}
 						</div>
 					</div>
 
@@ -40,22 +41,22 @@
 					<div style="background-color:#00AE41" class="col-md-4 col-eq-height steps">
 						<h6 class="text-large text-uppercase">01.</h6>
 						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
-		        <h3>EXPÉRIENCE</h3>
-						<span>La réussite de notre entreprise L’Aire Visuelle repose surtout sur notre équipe composée de tous les intervenants et professionnels du domaine de l’optique. Toujours à l’affût des nouvelles technologies, ils sont passionnés de leur travail. </span>
+		        <h3>{{- .Params.section2.column1.title -}}</h3>
+						<span>{{- .Params.section2.column1.text -}}</span>
 					</div>
 
 					<div style="background-color:rgba(0,174,65,0.72)" class="col-md-4 col-eq-height steps">
 						<h6 class="text-large text-uppercase">02.</h6>
 						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
-		        <h3>IDENDITÉ</h3>
-						<span>Notre liberté en tant que bureau d’optométristes et opticiens indépendant nous permet de conserver une identité propre et offrir à notre clientèle une très grande diversité de produits. Notre engagement envers notre clientèle est primordial et le client demeure notre priorité ! </span>
+		        <h3>{{- .Params.section2.column2.title -}}</h3>
+						<span>{{- .Params.section2.column2.text -}}</span>
 					</div>
 
 					<div style="background-color:rgba(0,174,65,0.5)" class="col-md-4 col-eq-height steps">
 						<h6 class="text-large text-uppercase">03.</h6>
 						<img src="/img/logo-bg-w.png" alt="Aire visuelle" class="logo-bg">
-		        <h3>STYLE</h3>
-						<span>Notre nouvel emplacement, et sa grande salle de montre, vaste et moderne, vous offre le plus grand choix de montures en ville ! L’Aire Visuelle devient une référence dans le domaine des soins oculo-visuel ! </span>
+		        <h3>{{- .Params.section2.column3.title -}}</h3>
+						<span>{{- .Params.section2.column3.text -}}</span>
 					</div>
 				</div>
 		</section>
@@ -63,8 +64,8 @@
 		<section class="background-grey">
 			<div class="container">
 				<div class="heading heading-center">
-					<h2>Une équipe de professionnels à votre service</h2>
-					<span class="lead">Les membres de notre équipe de professionnels se composent de 4 optométristes, 4 opticiens ainsi que des conseillères-stylistes</span>
+					<h2>{{- .Params.section3.title -}}</h2>
+					<span class="lead">{{- .Params.section3.text -}}</span>
 				</div>
 				<div class="row team-members team-members-shadow m-b-40">
 					{{ range sort .Site.Data.equipe.equipe ".ordre"}}
@@ -76,17 +77,16 @@
 					{{ end }}
 					{{ else if eq $.Lang "en" }}
 					{{ if eq .group "ood" }}
-					{{ $.Scratch.Set "cliclink" ("rendez-vous-opticien/" |  absLangURL) }}
+					{{ $.Scratch.Set "cliclink" ("appointment-optician/" |  absLangURL) }}
 					{{ else }}
-					{{ $.Scratch.Set "cliclink" ("rendez-vous-optometriste/" |  absLangURL) }}
+					{{ $.Scratch.Set "cliclink" ("appointment-optometrist/" |  absLangURL) }}
 					{{ end }}
 					{{ end }}
             <div class="col-md-3">
                 <div class="team-member">
                     <div class="team-desc">
                         <h3>{{.name}}</h3>
-                        <p>{{.title}}</p>
-                       
+                        <p>{{ if eq $.Lang "fr" }}{{.title}}{{ else if eq $.Lang "en" }}{{.titleen}}{{end}}</p>
                         <div class="align-center">
                             <!-- <a class="btn btn-xs btn-slide btn-light" href="#">
                                 <i class="fa fa-facebook"></i>
@@ -98,11 +98,11 @@
                             </a> -->
                             <a class="btn btn-xs btn-slide btn-light" href='{{$.Scratch.Get "cliclink"}}' data-width="130">
                                 <i class="fa fa-calendar"></i>
-                                <span>Rendez-vous</span>
+                                <span>{{ i18n "book" }}</span>
                             </a>
                             <a class="btn btn-xs btn-slide btn-light" href="mailto:{{$.Site.Data.settings.email}}" data-width="115">
                                 <i class="fa fa-envelope"></i>
-                                <span>Courriel</span>
+                                <span>{{ i18n "email_plain" }}</span>
                             </a>
                         </div>
                     </div>
@@ -117,38 +117,18 @@
 				<div class="row p-b-40">
 					<div class="col-md-3">
 						<div class="heading heading text-left">
-							<h2>L'Aire Visuelle en images</h2>
-							
+							<h2>{{- .Params.section4.title -}}</h2>
 						</div>
 					</div>
 					<div class="col-md-9">
-						<p>Après des années de travail, l’équipe de L’Aire Visuelle voulait changer d’AIRE. Elle a donc demandé à la firme d’architectes La SHED architecture de lui créer une clinique de facture moderne, spacieuse, au design épuré et fonctionnel. Résultat? Un espace hors du commun, aéré et lumineux, axé sur l’expérience client. Venez voir par vous-même!</p>
+						<p>{{- .Params.section4.text -}}</p>
 						<!-- Gallery -->
               <div class="grid-layout grid-3-columns" data-margin="20" data-item="grid-item" data-lightbox="gallery">
+              	{{ range .Params.section4.images }}
                   <div class="grid-item">
-                    	<a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/opticien-1.jpg"></a>
+                    	<a class="image-hover-zoom" href="/xl/{{.url}}" data-lightbox="gallery-item"><img src="/quart{{.url}}"></a>
                   </div>
-                  <div class="grid-item">
-                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/opticien-2.jpg"></a>
-                  </div>
-                  <div class="grid-item">
-                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/optometriste-1.jpg"></a>
-                  </div>
-                  <div class="grid-item">
-                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/optometriste-2.jpg"></a>
-                  </div>
-                  <div class="grid-item">
-                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/optometriste-3.jpg"></a>
-                  </div>
-                  <div class="grid-item">
-                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/optometriste-4.jpg"></a>
-                  </div>
-                  <div class="grid-item">
-                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/optometriste-5.jpg"></a>
-                  </div>
-                  <div class="grid-item">
-                      <a class="image-hover-zoom" href="#" data-lightbox="gallery-item"><img src="/quart/img/optometriste-6.jpg"></a>
-                  </div>
+                {{ end }}
               </div>
               <!-- end: Gallery -->
 					</div>
