--- a/themes/airevisuelle/layouts/singles/rendez-vous.html
+++ b/themes/airevisuelle/layouts/singles/rendez-vous.html
@@ -16,8 +16,8 @@
                         <div class="col-md-6">
                             <div class="team-member">
                                 <div class="team-desc">
-                                    <h3>{{.name}}</h3>
-                                    <p>{{.title}}</p>
+                                    <h3>{{ if eq $.Lang "en" }}{{.nameen}}{{else}}{{.name}}{{end}}</h3>
+                                    <p>{{ if eq $.Lang "en" }}{{.titleen}}{{else}}{{.title}}{{end}}</p>
                                 </div>
                             </div>
                         </div>
@@ -66,8 +66,8 @@
                         <div class="col-md-6">
                             <div class="team-member">
                                 <div class="team-desc">
-                                    <h3>{{.name}}</h3>
-                                    <p>{{.title}}</p>
+                                    <h3>{{ if eq $.Lang "en" }}{{.nameen}}{{else}}{{.name}}{{end}}</h3>
+                                    <p>{{ if eq $.Lang "en" }}{{.titleen}}{{else}}{{.title}}{{end}}</p>
                                 </div>
                             </div>
                         </div>
