Fixed white lang selector

--- a/themes/airevisuelle/assets/scss/header.scss
+++ b/themes/airevisuelle/assets/scss/header.scss
@@ -103,6 +103,9 @@
             i {
                 color: $white;
             }
+            .lang.title {
+                color: $white;
+            }
             .lines,
             .lines:before,
             .lines:after {
