--- a/themes/airevisuelle/layouts/singles/nous-rejoindre.html
+++ b/themes/airevisuelle/layouts/singles/nous-rejoindre.html
@@ -73,22 +73,22 @@
                         <div class="row">
                             <div class="form-group col-sm-6">
                                 <label for="name">{{ i18n "name" }}</label>
-                                <input type="text" aria-required="true" name="widget-contact-form-name" class="form-control required name" placeholder='{{ i18n "enter_name" }}'>
+                                <input type="text" aria-required="true" name="widget-contact-form-name" class="form-control required name" placeholder='{{ i18n "enter_name" }}' required>
                             </div>
                             <div class="form-group col-sm-6">
                                 <label for="email">{{ i18n "email" }}</label>
-                                <input type="email" aria-required="true" name="widget-contact-form-email" class="form-control required email" placeholder='{{ i18n "enter_email" }}'>
+                                <input type="email" aria-required="true" name="widget-contact-form-email" class="form-control required email" placeholder='{{ i18n "enter_email" }}' type="email" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col-sm-12">
                                 <label for="subject">{{ i18n "subject" }}</label>
-                                <input type="text" name="widget-contact-form-subject" class="form-control required" placeholder='{{ i18n "subject" }}...'>
+                                <input type="text" name="widget-contact-form-subject" class="form-control" placeholder='{{ i18n "subject" }}...'>
                             </div>
                         </div>                                
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea type="text" name="widget-contact-form-message" rows="5" class="form-control required" placeholder='{{ i18n "enter_message" }}'></textarea>
+                            <textarea type="text" name="widget-contact-form-message" rows="5" class="form-control" placeholder='{{ i18n "enter_message" }}'></textarea>
                         </div>
 
                         <button class="btn btn-default" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;{{ i18n "send_message" }}</button>
